--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # server.port=8080
 spring.datasource.url=jdbc:postgresql://localhost:5432/cars
 spring.datasource.username=postgres
-spring.datasource.password=docker
+spring.datasource.password=mysecretpassword
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
